Site/webapp/wdkCustomization/css/dataset-searches.css
html {
  overflow-y: scroll;
}

/* utility classes */
.btn {
  cursor: pointer;
  font-family: Arial, Helvetica, sans-serif;
  padding: 2px 0px;
  font-size: 10px;
  line-height: 15px;
  width: 36px;
  display: inline-block;
  text-align: center;
  color: #000000;
  border-radius: 4px;
  border: 1px solid #cccccc;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  box-shadow: 1px 1px 0 #e6e6e6;
  -moz-box-shadow: 1px 1px 0 #e6e6e6;
  -webkit-box-shadow: 1px 1px 0 #e6e6e6;
  -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=1, Direction=135, Color='#e6e6e6')";
  background-color: #e6e6e6;
  background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
  background-image: -moz-linear-gradient(to bottom, #ffffff, #e6e6e6);
  background-image: -o-linear-gradient(to bottom, #ffffff, #e6e6e6);
  background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
  filter: "progid:DXImageTransform.Microsoft.Gradient(startColorStr=#ffffff, endColorStr=#e6e6e6)";
  background-repeat: repeat-x;
}
.btn-blue {
  color: #ffffff;
  border: 1px solid #4576c0;
  background-color: #4576c0;
  background-image: linear-gradient(to bottom, #73a5f1, #4576c0);
  background-image: -moz-linear-gradient(to bottom, #73a5f1, #4576c0);
  background-image: -o-linear-gradient(to bottom, #73a5f1, #4576c0);
  background-image: -webkit-linear-gradient(top, #73a5f1, #4576c0);
  -ms-filter: "progid:DXImageTransform.Microsoft.Gradient(startColorStr=#73a5f1, endColorStr=#4576c0)";
}
.btn-brown {
  color: #ffffff;
  border: 1px solid #9E6946;
  background-color: #9E6946;
  background-image: linear-gradient(to bottom, #C79F6C, #9E6946);
  background-image: -moz-linear-gradient(to bottom, #C79F6C, #9E6946);
  background-image: -o-linear-gradient(to bottom, #C79F6C, #9E6946);
  background-image: -webkit-linear-gradient(top, #C79F6C, #9E6946);
  -ms-filter: "progid:DXImageTransform.Microsoft.Gradient(startColorStr=#C79F6C, endColorStr=#9E6946)";
}
.btn-green {
  color: #ffffff;
  border: 1px solid #3f963f;
  background-color: #3f963f;
  background-image: linear-gradient(to bottom, #86c586, #3f963f);
  background-image: -moz-linear-gradient(to bottom, #86c586, #3f963f);
  background-image: -o-linear-gradient(to bottom, #86c586, #3f963f);
  background-image: -webkit-linear-gradient(top, #86c586, #3f963f);
  -ms-filter: "progid:DXImageTransform.Microsoft.Gradient(startColorStr=#86c586, endColorStr=#3f963f)";
}
.btn-red {
  color: #ffffff;
  border: 1px solid #b34949;
  background-color: #b34949;
  background-image: linear-gradient(to bottom, #d67676, #b34949);
  background-image: -moz-linear-gradient(to bottom, #d67676, #b34949);
  background-image: -o-linear-gradient(to bottom, #d67676, #b34949);
  background-image: -webkit-linear-gradient(top, #d67676, #b34949);
  -ms-filter: "progid:DXImageTransform.Microsoft.Gradient(startColorStr=#d67676, endColorStr=#b34949)";
}
.btn:hover, .btn:focus {
  background-position: 0 -8px;
  text-decoration: none;
  /*
  transition: background-position 0.1s linear;
  -moz-transition: background-position 0.1s linear;
  -o-transition: background-position 0.1s linear;
  -webkit-transition: background-position 0.1s linear;
  */
}
.btn:active, .btn-active {
  background-image: none;
  box-shadow: 1px 1px 0 #eeeeee;
  -moz-box-shadow: 1px 1px 0 #eeeeee;
  -webkit-box-shadow: 1px 1px 0 #eeeeee;
  -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=1, Direction=135, Color='#eeeeee')";
}

.dataset-searches {
  width: 90%;
  min-width: 900px;
  max-width: 1060px;
  margin: 0 auto;
  visibility: hidden;
  /*padding-top: 7em;*/
  position: relative;
}
.dataTable {
  font-size: 14px;
  width: 100%;
}
.dataTable .ui-state-default {
  border: none;
  border-top: 2px solid;
  border-bottom: 2px solid;
  background: white;
}
.dataTables_wrapper .ui-widget-header {
  padding: 0px;
}
.dataTables_filter input {
  padding-right: 2em;
  width: 12em;
}
.dataTables_filter input + .filter-clear {
  display: none;
  position: relative;
  left: -20px;
  top: 3px;
  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
  cursor: pointer;
}
.dataTables_filter input.content + .filter-clear:hover {
  opacity: 0.7;
  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
}
.dataTables_filter input.content + .filter-clear,
.dataTables_filter input.content + .filter-clear:active {
  display: inline-block;
  opacity: 0.5;
  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
}
.dataTable th ,
.dataTable td {
  padding: 0.4em 0em;
  vertical-align: middle;
  background-color: #ffffff;
  text-align: left;
}
.dataTable tr:first-child th:first-child ,
.dataTable tr td:first-child {
  padding-left: 0.8em;
}
.dataTable tr:first-child th:last-child ,
.dataTable tr td:last-child {
  padding-right: 0.8em;
}
.dataTable th {
  color: black; /* define link hover color in {project}.css */
  vertical-align: bottom;
}
.dataTable td {
  border-bottom: 1px solid #dddddd;
  border-top: none;
  line-height: 1.2;
}
.dataTable tr:hover td {
  background-color: #f7f7f7;
}
.dataTable tr.active td {
  background-color: #f0f0f0;
}
th.searches {
  text-align: center;
  white-space: nowrap;
}
.search-head {
  display: none;
}
/* The following three rules kanged from http://s-church.net/Blog/Entry/464 */
.dataTable th.skew {
    vertical-align: bottom;
    padding: 0;
}
 
.dataTable th.skew > div {
    position: relative;
    top: -86px;
    left: 48px;
    width: 50px;
    transform:skew(-45deg,0deg);
    -ms-transform:skew(-45deg,0deg);
    -moz-transform:skew(-45deg,0deg);
    -webkit-transform:skew(-45deg,0deg);
    -o-transform:skew(-45deg,0deg);    
    z-index: 1;
    padding-bottom: 5px;
}
 
.dataTable th.skew span {
    transform:skew(45deg,0deg) rotate(315deg);
    -ms-transform:skew(45deg,0deg) rotate(315deg);
    -moz-transform:skew(45deg,0deg) rotate(315deg);
    -webkit-transform:skew(45deg,0deg) rotate(315deg);
    -o-transform:skew(45deg,0deg) rotate(315deg);        
    position: relative;
    left: -30px;
    bottom: -32px;
    display: inline-block;
    width: 150px;
    text-align: left;
}
.dataTable th.sorting,
.dataTable th.sorting_asc,
.dataTable th.sorting_desc {
  cursor: pointer;
  background-position: left center;
  background-repeat: no-repeat;
  text-indent: 1.5em;
}
.dataTable th.sorting {
  background-image: url('../../wdk/images/sort_both.png');
}
.dataTable th.sorting_asc {
  background-image: url('../../wdk/images/sort_asc.png');
}
.dataTable th.sorting_desc {
  background-image: url('../../wdk/images/sort_desc.png');
}
.dataTable td.description {
}
.dataTable td.description div {
  position: relative;
  padding-left: 3em;
  text-indent: -1.2em;
}
.dataTable.collapsed tbody tr {
  display: none;
}
.dataTable.collapsed tbody tr.active {
  display: table-row;
}
.table-toggle {
  display: none;
  text-align: center;
  background: #f7f7f7;
  border-bottom: 1px solid #dddddd;
  cursor: pointer;
  padding-bottom: 2px;
}
.table-toggle:hover {
  background: #f0f0f0;
}
.table-toggle label {
  cursor: pointer;
  font-weight: bold;
}
.table-toggle .ui-icon {
  display: inline-block;
  position: relative;
  top: 4px;
}
.dataTables_scrollBody {
  position: relative;
}
td.search-mechanism {
  text-align: center;
  padding: 4px;
  width: 36px;
}
td.search-mechanism a {
  color: #ffffff;
  /*
  padding: 2px;
  font-size: 10px;
  line-height: 16px;
  width: 26px;
  display: inline-block;
  text-align: center;
  border-radius: 4px;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  box-shadow: 1px 1px 0 rgb(200,200,200);
  -moz-box-shadow: 1px 1px 0 rgb(200,200,200);
  -webkit-box-shadow: 1px 1px 0 rgb(200,200,200);
  -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=1, Direction=135, Color='#CCCCCC')";
  */
}
.red-dot {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 5px;
  background-color: darkred;
}
.mag-glass {
  display: inline-block;
  width: 22px;
  height: 22px;
  background: url(/assets/images/mag_glass.png);
  vertical-align: middle;
}
.info {
  display: inline-block;
  width: 13px;
  height: 12px;
  background: url(../../wdk/images/question.png);
  vertical-align: middle;
  position: absolute;
  left: 6px;
  top: 0px;
}
.legend .tooltip-content,
.dataset-tooltip-content {
  display: none;
}
#question-wrapper.active {
  margin-top: 0.5em;
  padding-top: 1em;
}
#question-wrapper .ui-widget {
  font-size: 1em;
}
.tabs {
  border: none;
}
.ui-tabs-panel {
  min-height: 500px;
}
.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button {
  font-family: inherit;
  font-size: inherit;
}
/*
.legend, .dataTables_filter {
  position: absolute;
  top: 1em;
  margin: 0;
  padding: 0;
*/
.legend {
  float: right;
}
.legend {
  right: 0em;
  color: #777777;
  width: 70%;
}
.legend div:first-child {
  color: black;
  height: 5em;
}
.legend div {
  padding: 0.2em 0.6em;
  float: left;
  line-height: 18px;
}
.legend ul span:first-child {
  margin-right: 0.4em;
  float: left;
}
.legend ul span:nth-child(2) {
  line-height: 20px;
}
.legend li {
  float: left;
  padding: 0.2em 0.6em;
  width: 20%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.legend div span:first-child {
  margin-right: 0.2em;
}
.legend .search-mechanism.btn {
  /* color: #e6e6e6; */
  cursor: default;
}

